--- a/package.json
+++ b/package.json
@@ -17,16 +17,18 @@
     "@types/node": "^22.5.0",
     "@types/nodemailer": "^6.4.17",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.5.4"
+    "typescript": "^5.8.3"
   },
   "dependencies": {
     "@prisma/client": "^5.18.0",
     "@types/cors": "^2.8.17",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^1.4.12",
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.6.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^7.0.3",
